--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
-    <title>Montgomery County Traffic Violations in the past day</title>
+    <meta name="description" content="A webpage by Justin Kuang that shows Montgomery County Traffic Violations in the past day"/>
+    <meta name="author" content="Justin Kuang"/>
+
+    <title>Montgomery County Traffic Violation Visualizer</title>
     <link rel="stylesheet" href="911.css">
     <style>
         html,
