Fixed weird weird data collection structure

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="settings">
         <h2 id="updated"></h2>
 
-        <form id=choices>
+        <form id="choices" action="javascript:return false;">
             <h2>Attributes</h2> Accident:
             <br>
             <input type="radio" name="Accident" value="male" id="accidentYes"> Yes <br>
@@ -62,8 +62,7 @@
             <input type="radio" name="violation_type" value="warning" id="vioWarning"> Warning
             <br>
             <br>
-            <button id="showall">reset the idiot drivers</button>
-
+            <button id="showAll">reset the idiot drivers</button>
         </form>
         </br>
         </br>
