2020 4 year update. release notes- fixed bug with accident attribute, redesigned logic to be more scalable, added DUI attribute, adds driver's home and car info to each popup

--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@
     <div id="settings">
         <h2 id="updated"></h2>
 
-        <form id="choices" action="javascript:return false;">
+        <form id="choices" action="javascript:return null;">
             <h2>Attributes</h2> Accident:
             <br>
             <input type="radio" name="Accident" value="male" id="accidentYes"> Yes <br>
             <input type="radio" name="Accident" value="female" id="accidentNo"> No
+
+            <br><br> DUI:
+            <br>
+            <input type="radio" name="dui" value="Yes" id="duiYes"> Yes <br>
+            <input type="radio" name="dui" value="No" id="duiNo"> No
 
             <br><br> Gender:
             <br>
